--- a/.github/workflows/apply-dev.yml
+++ b/.github/workflows/apply-dev.yml
@@ -1,4 +1,4 @@
-name: Apply PR
+name: Apply Push to Dev
 
 on:
   push:
@@ -21,5 +21,5 @@ jobs:
           path: main
       - name: Prepare to run Ansible
         run: . main/ci/scripts/common-setup.sh
-      - name: Execute Ansible playbook
-        run: . main/ci/scripts/ansible-execute.sh
+      - name: Execute Ansible playbook (DEV)
+        run: . main/ci/scripts/ansible-execute.sh DEV
