--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,9 +5,14 @@ on:
     branches: [ $default-branch ]
 
 env:
-  SSH_KEY: ${{ secrets.SSH_KEY }}
-  SSH_HOST: ${{ secrets.SSH_HOST }}
-  SSH_USER: ${{ secrets.SSH_USER }}
+  SSH_KEY_DEV: ${{ secrets.SSH_KEY_DEV }}
+  SSH_HOST_DEV: ${{ secrets.SSH_HOST_DEV }}
+  SSH_USER_DEV: ${{ secrets.SSH_USER_DEV }}
+
+  SSH_KEY_PROD: ${{ secrets.SSH_KEY_PROD }}
+  SSH_HOST_PROD: ${{ secrets.SSH_HOST_PROD }}
+  SSH_USER_PROD: ${{ secrets.SSH_USER_PROD }}
+  
 
 jobs:
   build:
@@ -24,6 +29,8 @@ jobs:
         with:
           path: pr
       - name: Prepare to run Ansible
-        run: . main/ci/scripts/common-setup.sh
-      - name: Check Ansible playbook
-        run: . main/ci/scripts/ansible-check.sh
+        run: . main/ci/scripts/prep.sh
+      - name: Check Ansible playbook (DEV)
+        run: . main/ci/scripts/ansible-check.sh DEV
+      - name: Check Ansible playbook (PROD)
+        run: . main/ci/scripts/ansible-check.sh PROD
