--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,8 @@ name: Check PR
 
 on:
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - main
 
 env:
   SSH_KEY_DEV: ${{ secrets.SSH_KEY_DEV }}
@@ -23,7 +24,7 @@ jobs:
       - name: Checkout main branch
         uses: actions/checkout@v4
         with:
-          ref: $default-branch
+          ref: main
           path: main
       - name: Checkout PR branch
         uses: actions/checkout@v4
