--- a/.github/workflows/apply-prod.yml
+++ b/.github/workflows/apply-prod.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout main branch
         uses: actions/checkout@v4
         with:
-          ref: $default-branch
+          ref: main
           path: main
       - name: Prepare to run Ansible
         run: . main/ci/scripts/common-setup.sh
