--- a/.github/workflows/apply-prod.yml
+++ b/.github/workflows/apply-prod.yml
@@ -23,6 +23,6 @@ jobs:
           ref: main
           path: main
       - name: Prepare to run Ansible
-        run: . main/ci/scripts/common-setup.sh
+        run: . main/ci/scripts/prep.sh
       - name: Execute Ansible playbook (PROD)
         run: . main/ci/scripts/ansible-execute.sh PROD
