--- a/.github/workflows/apply-dev.yml
+++ b/.github/workflows/apply-dev.yml
@@ -9,14 +9,9 @@ env:
   SSH_KEY_DEV: ${{ secrets.SSH_KEY_DEV }}
   SSH_HOST_DEV: ${{ secrets.SSH_HOST_DEV }}
   SSH_USER_DEV: ${{ secrets.SSH_USER_DEV }}
+  SSH_SUDO_DEV: ${{ secrets.SSH_SUDO_DEV }}
   ANSIBLE_VAULT_DEV: ${{ secrets.ANSIBLE_VAULT_DEV }}
   ANSIBLE_VAULT_K_DEV: ${{ secrets.ANSIBLE_VAULT_K_DEV }}
-
-  SSH_KEY_PROD: ${{ secrets.SSH_KEY_PROD }}
-  SSH_HOST_PROD: ${{ secrets.SSH_HOST_PROD }}
-  SSH_USER_PROD: ${{ secrets.SSH_USER_PROD }}
-  ANSIBLE_VAULT_PROD: ${{ secrets.ANSIBLE_VAULT_PROD }}
-  ANSIBLE_VAULT_K_PROD: ${{ secrets.ANSIBLE_VAULT_K_PROD }}
 
 jobs:
   build:
