--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -2,7 +2,7 @@
   remote_user: root
   vars_files:
     - vars/flags.yml
-  roles:
+  tasks:
     - name: Primary node setup
       include_role:
         name: setup
