--- a/playbooks/roles/backblaze/tasks/main.yml
+++ b/playbooks/roles/backblaze/tasks/main.yml
@@ -1,5 +1,7 @@
 - name: Install Duplicity
   import_tasks: dependencies.yml
-  
+  become: true
+
 - name: Create Duplicity systemd backup timer
   import_tasks: service.yml
+  become: true
