--- a/playbooks/roles/alerting/tasks/main.yml
+++ b/playbooks/roles/alerting/tasks/main.yml
@@ -3,3 +3,4 @@
     - name: Create systemd notifier
       import_tasks: notifier.yml
   when: flags['{{ env }}']['setup'] and flags['{{ env }}']['alerting']
+  become: true
