--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -11,6 +11,10 @@
       include_role:
         name: alerting
       when: flags[env]['alerting']
+    - name: SSH
+      include_role:
+        name: ssh
+      when: flags[env]['ssh']
     - name: Backblaze B2 backups
       include_role:
         name: backblaze
