--- a/.github/workflows/apply-dev.yml
+++ b/.github/workflows/apply-dev.yml
@@ -10,8 +10,9 @@ env:
   SSH_HOST_DEV: ${{ secrets.SSH_HOST_DEV }}
   SSH_USER_DEV: ${{ secrets.SSH_USER_DEV }}
   SSH_SUDO_DEV: ${{ secrets.SSH_SUDO_DEV }}
-  ANSIBLE_VAULT_DEV: ${{ secrets.ANSIBLE_VAULT_DEV }}
   ANSIBLE_VAULT_K_DEV: ${{ secrets.ANSIBLE_VAULT_K_DEV }}
+  SA_DEV: ${{ secrets.SA_DEV }}
+  BUCKET_DEV: ${{ secrets.BUCKET_DEV }}
 
 jobs:
   build:
