--- a/.github/workflows/apply-prod.yml
+++ b/.github/workflows/apply-prod.yml
@@ -8,8 +8,9 @@ env:
   SSH_HOST_PROD: ${{ secrets.SSH_HOST_PROD }}
   SSH_USER_PROD: ${{ secrets.SSH_USER_PROD }}
   SSH_SUDO_PROD: ${{ secrets.SSH_SUDO_PROD }}
-  ANSIBLE_VAULT_PROD: ${{ secrets.ANSIBLE_VAULT_PROD }}
   ANSIBLE_VAULT_K_PROD: ${{ secrets.ANSIBLE_VAULT_K_PROD }}
+  SA_PROD: ${{ secrets.SA_PROD }}
+  BUCKET_PROD: ${{ secrets.BUCKET_PROD }}
 
 
 jobs:
