--- a/playbooks/roles/users/tasks/main.yml
+++ b/playbooks/roles/users/tasks/main.yml
@@ -2,12 +2,12 @@
   block:
     - name: Create user {{ item["name"] }}
       ansible.builtin.user:
-        name: {{ item["name"] }}
+        name: '{{ item["name"] }}'
         append: true
-        groups: {{ item["groups"] }}
+        groups: '{{ item["groups"] }}'
         password: "*"
         create_home: true
-        state: {{ item["state"] }}
+        state: '{{ item["state"] }}'
 
     - name: Create authorized_keys file for {{ item["name"] }}
       block:
@@ -17,7 +17,7 @@
             state: directory
             mode: '0700'
           become: true
-          become_user: {{ item["name"] }}
+          become_user: '{{ item["name"] }}'
 
         - name: Add authorized_keys file
           ansible.builtin.template:
@@ -27,7 +27,7 @@
             group: root
             mode: '0700'
           become: true
-          become_user: {{ item["name"] }}
+          become_user: '{{ item["name"] }}'
       when:
         - items["state"] == "present"
         - items["ssh_keys"] is defined
