--- a/playbooks/roles/users/tasks/main.yml
+++ b/playbooks/roles/users/tasks/main.yml
@@ -1,36 +1,3 @@
-- name: Create users as defined in vault
-  block:
-    - name: Create user {{ item["name"] }}
-      ansible.builtin.user:
-        name: '{{ item["name"] }}'
-        append: true
-        groups: '{{ item["groups"] }}'
-        password: "*"
-        create_home: true
-        state: '{{ item["state"] }}'
-
-    - name: Create authorized_keys file for {{ item["name"] }}
-      block:
-        - name: Add .ssh folder
-          ansible.builtin.file:
-            path: /home/{{ item["name"] }}/.ssh
-            state: directory
-            mode: '0700'
-          become: true
-          become_user: '{{ item["name"] }}'
-
-        - name: Add authorized_keys file
-          ansible.builtin.template:
-            src: ../files/authorized_keys
-            dest: /home/{{ item["name"] }}/.ssh/authorized_keys
-            owner: root
-            group: root
-            mode: '0700'
-          become: true
-          become_user: '{{ item["name"] }}'
-      when:
-        - items["state"] == "present"
-        - items["ssh_keys"] is defined
-        - items["ssh_keys"] is iterable
-        - items["ssh_keys"] | length > 0
-  loop: "{{ users }}"
+- name: Install Duplicity
+  import_tasks: dependencies.yml
+  loop: '{{ users }}'
