--- a/playbooks/roles/backblaze/tasks/service.yml
+++ b/playbooks/roles/backblaze/tasks/service.yml
@@ -21,10 +21,12 @@
     owner: root
     group: root
   become: true
+  register: systemd_conf
 
 - name: Validate notifier systemd service
   ansible.builtin.command: systemd-analyze verify /etc/systemd/system/duplicity-backup.service
   become: true
+  when: systemd_conf.changed
 
 - name: Create duplicity-backup systemd timer
   ansible.builtin.template:
@@ -33,10 +35,12 @@
     owner: root
     group: root
   become: true
+  register: systemd_conf
 
 - name: Validate notifier systemd service
   ansible.builtin.command: systemd-analyze verify /etc/systemd/system/duplicity-backup.timer
   become: true
+  when: systemd_conf.changed
 
 - name: Enable duplicity-backup systemd timer
   ansible.builtin.systemd_service:
