--- a/playbooks/roles/users/tasks/user.yml
+++ b/playbooks/roles/users/tasks/user.yml
@@ -12,12 +12,12 @@
 - name: Delete password for {{ item["name"] }}
   ansible.builtin.command: passwd --delete {{ item["name"] }}
   become: true
-  #when: user.changed
+  when: user.changed
 
 - name: Expire password for {{ item["name"] }}
   ansible.builtin.command: passwd --expire {{ item["name"] }}
   become: true
-  #when: user.changed
+  when: user.changed
 
 - name: Create authorized_keys file for {{ item["name"] }}
   block:
