--- a/playbooks/roles/setup/tasks/main.yml
+++ b/playbooks/roles/setup/tasks/main.yml
@@ -4,3 +4,7 @@
     state: directory
     mode: '0755'
   become: true
+- name: Set hostname
+  ansible.builtin.hostname: 
+    name: '{{ hostname }}'
+  become: true
