--- a/playbooks/roles/users/tasks/user.yml
+++ b/playbooks/roles/users/tasks/user.yml
@@ -63,4 +63,4 @@
         group: '{{ item["name"] }}'
       become: true
 
-  #when: item["name"] not in getent_passwd.keys()
+  when: item["name"] not in getent_passwd.keys()
