Whyfore hath thou forsaken me Ansible

--- a/playbooks/roles/mysql/tasks/security.yml
+++ b/playbooks/roles/mysql/tasks/security.yml
@@ -16,7 +16,6 @@
   register: mysql_script
 
 - name: Execute templated script secure-setup.sh
-  ansible.builtin.script: 
-    remote_src: /scripts/mysql/secure-setup.sh 
+  ansible.builtin.command: /bin/bash /scripts/mysql/secure-setup.sh 
   become: true
   #when: mysql_script.changed
