--- a/playbooks/roles/nginx/tasks/config.yml
+++ b/playbooks/roles/nginx/tasks/config.yml
@@ -7,6 +7,24 @@
   become: true
   register: nginx_conf
 
+- name: Remove default site symlink
+  ansible.builtin.file:
+    path: /etc/nginx/sites-enabled/default
+    state: absent
+  become: true
+
+- name: Remove default site
+  ansible.builtin.file:
+    path: /etc/nginx/sites-available/default
+    state: absent
+  become: true
+
+- name: Remove default site folder
+  ansible.builtin.file:
+    path: /var/www/html
+    state: absent
+  become: true
+
 - name: Validate nginx.conf
   ansible.builtin.command: nginx -t
   become: true
@@ -20,9 +38,3 @@
     enabled: true
   become: true
   when: nginx_conf.changed
-
-- name: Remove default site
-  ansible.builtin.file:
-    path: /var/www/html
-    state: absent
-  become: true
