--- a/playbooks/roles/backblaze/tasks/dependencies.yml
+++ b/playbooks/roles/backblaze/tasks/dependencies.yml
@@ -2,6 +2,6 @@
   ansible.builtin.apt:
     update_cache: yes
     pkg:
-    - duplicity>=0.8.08
+    - duplicity
     - python3-b2sdk
   become: true
