--- a/playbooks/roles/nginx/tasks/config.yml
+++ b/playbooks/roles/nginx/tasks/config.yml
@@ -31,7 +31,7 @@
   when: nginx_conf.changed
 
 - name: Restart nginx
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: nginx.service
     state: restarted
     scope: system
