--- a/playbooks/roles/ssh/tasks/main.yml
+++ b/playbooks/roles/ssh/tasks/main.yml
@@ -9,7 +9,7 @@
   register: sshd_conf
 
 - name: Restart sshd service
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: sshd
     state: reloaded
   become: true
