--- a/playbooks/roles/alerting/tasks/main.yml
+++ b/playbooks/roles/alerting/tasks/main.yml
@@ -2,4 +2,4 @@
   block:
     - name: Create systemd notifier
       import_tasks: notifier.yml
-  when: flags[env]['setup'] and flags[env]['alerting']
+  when: flags['setup'] and flags['alerting']
