--- a/playbooks/roles/pterodactyl/tasks/dependencies.yml
+++ b/playbooks/roles/pterodactyl/tasks/dependencies.yml
@@ -18,17 +18,17 @@
   ansible.builtin.apt:
     update_cache: no
     pkg:
-    - php{{ dependency_versions[env]["php"] }}
-    - php{{ dependency_versions[env]["php"] }}-common
-    - php{{ dependency_versions[env]["php"] }}-cli
-    - php{{ dependency_versions[env]["php"] }}-gd
-    - php{{ dependency_versions[env]["php"] }}-mysql
-    - php{{ dependency_versions[env]["php"] }}-mbstring
-    - php{{ dependency_versions[env]["php"] }}-bcmath
-    - php{{ dependency_versions[env]["php"] }}-xml
-    - php{{ dependency_versions[env]["php"] }}-fpm
-    - php{{ dependency_versions[env]["php"] }}-curl
-    - php{{ dependency_versions[env]["php"] }}-zip 
+    - php{{ dependency_versions["php"] }}
+    - php{{ dependency_versions["php"] }}-common
+    - php{{ dependency_versions["php"] }}-cli
+    - php{{ dependency_versions["php"] }}-gd
+    - php{{ dependency_versions["php"] }}-mysql
+    - php{{ dependency_versions["php"] }}-mbstring
+    - php{{ dependency_versions["php"] }}-bcmath
+    - php{{ dependency_versions["php"] }}-xml
+    - php{{ dependency_versions["php"] }}-fpm
+    - php{{ dependency_versions["php"] }}-curl
+    - php{{ dependency_versions["php"] }}-zip 
     - mariadb-server 
     - tar 
     - nginx
